cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/otherLibrary/other_lib_header.h

#ifndef OTHER_LIB_HEADER_202433_H
#define OTHER_LIB_HEADER_202433_H

struct Struct202433 {
    int field1;
    int field2;
};

#endif
